hide fixed avatar on tablets

--- a/src/components/mobile-bottom/MobileBottom.module.scss
+++ b/src/components/mobile-bottom/MobileBottom.module.scss
@@ -19,7 +19,7 @@
 
 .row {
    display: inline-flex;
-   @include adaptive-value('gap', 30, 15, 0);
+   @include adaptive-value('gap', 30, 20, 0);
    align-items: center;
    justify-content: space-between
 }
